--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "@vuepic/vue-datepicker": "^8.1.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
